# src/types/workout.type.ts
@@ -41,20 +41,3 @@ export interface FitnessDetailState {
   createdAt: Date;
   updatedAt: Date;
 }
-
-// export interface WorkoutDetailUpdateDto {
-//   workoutId: Types.ObjectId;
-//   workout_name: WorkoutType;
-//   duration: number; // 운동 시간
-//   calories: number; // 소모 칼로리
-//   feedback?: string; // 소감, 감상
-//   // 피트니스
-//   body_part?: string; // 부위
-//   fitness_type?: string; // 종목
-//   sets?: number; // 세트 수
-//   reps?: number; // 횟수
-//   weight?: number; // 무게
-//   // 러닝
-//   avg_pace?: number; // 평균 페이스
-//   distance?: number; // 거리
-// }
